# adversarial-simulation

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
annotation/: .gitignore
annotation/backend/: main.py  requirements.txt
annotation/backend/models/: annotation.py  export.py  scene.py
annotation/backend/routers/: annotations.py  cases.py  export.py
annotation/backend/services/: annotations.py  centerline_extractor.py  clf_service.py  faro_parser.py  texture_service.py  trajectory_fitter.py
annotation/frontend/: index.html  package-lock.json  package.json
annotation/frontend/src/: App.tsx
annotation/frontend/src/components/: LayersPanel.tsx  PropertiesPanel.tsx  SceneCanvas.tsx  Toolbar.tsx
annotation/frontend/src/hooks/: useAnnotation.ts  useKeyboard.ts  useScene.ts
annotation/frontend/src/lib/: api.ts  theme.ts  types.ts
annotation/frontend/src/pages/: Dashboard.tsx  Workspace.tsx
annotation/scripts/: batch_classify.py  batch_classify.sh  batch_textures.py  batch_textures.sh  export_graph.py  export_training_data.py  run_dev.sh
data/: .gitignore
data/nhtsa-ciss/data/: .gitignore  move.py  scrape.py
notebooks/: cls_cache.json  convert.ipynb  convert.py  data_exploration.ipynb  dino.ipynb  qwen.ipynb  read.ipynb  test.ipynb  test.py  test_cls.py  text_prompt_inference.ipynb  waymo_viz.ipynb
notebooks/.ipynb_checkpoints/: convert-checkpoint.ipynb  qwen-checkpoint.ipynb  test-checkpoint.ipynb
notebooks/waymo_protos/waymo_open_dataset/protos/: map.proto  scenario.proto  scenario_pb2.py
preprocessing/: __init__.py  delaunay.py  main.ipynb  pyproject.toml  reader.py
preprocessing-py/: delaunay.py  faro.py  main.ipynb  som.py  test.ipynb  test.py  traj.py
preprocessing-rs/: Cargo.toml  pyproject.toml
preprocessing-rs/src/: classification.rs  faro.rs  lib.rs  main.rs
preprocessing/src/: geometry.rs
schema/: __init__.py  annotation.py  export.py  pyproject.toml
scripts/: compile_protos.sh
synthetic/: __init__.py  config.py  dataset.py  generator.py  normalization.py  pyproject.toml  randomization.py  schema.py  smoke_test.py
synthetic/loaders/: __init__.py  av2_loader.py  base.py  womd_loader.py
synthetic/loaders/proto/: __init__.py  scenario.proto  scenario_pb2.py
tests/synthetic/: test_av2_loader.py  test_config.py  test_dataset_anvil.py  test_dataset_gilbreth.py  test_generator.py  test_normalization.py  test_randomization.py  test_schema.py
