[project]
name = "adversarial-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-mcp-tools>=0.1.6",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "mplcursors>=0.7",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "pyclothoids>=0.2.0",
    "python-dotenv>=1.2.2",
    "rtree>=1.4.1",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
